[package]
name = "ArcDevKit"
version = "0.1.0"
edition = "2024"
authors = ["KilluaSSR xiaotian2001@outlook.com>"]
description = "The core generic module and ability framework."
repository = "https://github.com/KilluaSSR/ArcDevKitRs"
license = "MIT"
readme = "README.md"
keywords = ["plugin", "architecture", "framework", "dynamic", "module"]
categories = ["rust-patterns"]

[dependencies]
dashmap = "6"
inventory = "0.3"
erased-serde = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.3", features = ["full"] }
futures = "0.3"
